refactor: Compilation postman test